| Summary: | ASTERISK-26476: chan_sip: Incorrect display option "Outbound reg. retry 403" in "sip show settings" | ||
| Reporter: | Sergey Grachev (FreeSS) | Labels: | |
| Date Opened: | 2016-10-17 08:17:47 | Date Closed: | 2016-11-01 14:09:24 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 13.12.1 14.1.1 GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) asterisk-11.23-reg_retry_403_AST_CLI_YESNO.patch | |
| Description: | If in sip.conf (general section) set option register_retry_403=no, the command "sip show settings" return value:
Outbound reg. retry 403:0 If in sip.conf (general section) set option register_retry_403=yes, the command "sip show settings" return value: Outbound reg. retry 403:-1 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-17 08:17:47.871-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Sergey Grachev (FreeSS) 2016-10-17 08:24:54.595-0500 fix: in channels/chan_sip.c on 20991 string instead: ast_cli(a->fd, " Outbound reg. retry 403:%d\n", global_reg_retry_403); must be: ast_cli(a->fd, " Outbound reg. retry 403:%s\n", AST_CLI_YESNO(global_reg_retry_403)); By: Corey Farrell (coreyfarrell) 2016-10-30 10:16:33.252-0500 Note Asterisk 11 is in security fix only so this will only be addressed in 13+. This patch looks fine to me, would you like to post your patch to gerrit [1] so we can get this merged? If not may I have permission to do so on your behalf? [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review By: Sergey Grachev (FreeSS) 2016-11-01 05:53:26.839-0500 Hi, thanks for the reply. I don't have permission to Gerrit. Please, do it yourself By: Joshua C. Colp (jcolp) 2016-11-01 06:11:42.417-0500 [~FreeSS] You have signed the contributor license agreement so you do have access. Are you having difficulty setting it up or is there some other problem preventing you? By: Sergey Grachev (FreeSS) 2016-11-01 06:37:30.277-0500 I lost my password for authenticate on https://openid.asterisk.org/openidserver/ I'm try recovery my password and got URL on my email, but URL cannot be opened (use google public DNS): ping yooden.digium.api ping: unknown host yooden.digium.api By: Joshua C. Colp (jcolp) 2016-11-01 06:40:52.392-0500 Gerrit uses the same password as JIRA, everything uses the same authentication backend. By: Sergey Grachev (FreeSS) 2016-11-01 06:49:15.133-0500 I can not imagine how this could be. I just found yourself a new password in JIRA to my profile, log out / logged - ok, but authorize a URL https://openid.asterisk.org/openidserver fails By: Joshua C. Colp (jcolp) 2016-11-01 06:54:13.734-0500 Aha, your patch wasn't marked as a contribution when I thought it was. In order to contribute code we need the contributor license agreement signed (link is at the top of JIRA). This also gives you access to Gerrit. By: Sergey Grachev (FreeSS) 2016-11-01 07:12:07.709-0500 Joshua, thank you. "License Agreement Status Updated", access works. I post this patch to gerrit By: Joshua C. Colp (jcolp) 2016-11-01 07:16:35.969-0500 You're welcome and if you have any difficulty don't hesitate to ask for help. By: Friendly Automation (friendly-automation) 2016-11-01 09:03:25.505-0500 Change 4257 had a related patch set uploaded by Grachev Sergey: chan_sip: Incorrect display option Outbound reg. retry 403 [https://gerrit.asterisk.org/4257|https://gerrit.asterisk.org/4257] By: Friendly Automation (friendly-automation) 2016-11-01 09:06:54.701-0500 Change 4258 had a related patch set uploaded by Grachev Sergey: chan_sip: Incorrect display option Outbound reg. retry 403 [https://gerrit.asterisk.org/4258|https://gerrit.asterisk.org/4258] By: Rusty Newton (rnewton) 2016-11-01 09:40:26.189-0500 The attachment here on JIRA still wasn't marked as contribution. [~FreeSS] I went ahead and marked it for you. It is now marked under your license. By: Sergey Grachev (FreeSS) 2016-11-01 09:55:32.270-0500 Joshua, can you help me? I'm try cherry-pick from master to 13 branch, but i have "merge conflict". How i can resolve this conflict step-by-step? I'm novice in git :( By: Joshua C. Colp (jcolp) 2016-11-01 10:15:33.540-0500 You would need to do it manually on a new branch on your system. Example: git checkout 13 git checkout -b ASTERISK-26476-13 git review -x 4258 Edit channels/chan_sip.c so there is no more conflict. Once done add the file: git add channels/chan_sip.c And then commit it: git commit If it builds you can then put it up for review: git review -t ASTERISK-26476 13 If you have trouble we can help out further, just post what you see. By: Friendly Automation (friendly-automation) 2016-11-01 10:15:58.210-0500 Change 4261 had a related patch set uploaded by Corey Farrell: chan_sip: Incorrect display option Outbound reg. retry 403 [https://gerrit.asterisk.org/4261|https://gerrit.asterisk.org/4261] By: Joshua C. Colp (jcolp) 2016-11-01 10:19:13.709-0500 [~FreeSS] Looks like [~coreyfarrell] went ahead and did it for you. By: Friendly Automation (friendly-automation) 2016-11-01 14:09:24.778-0500 Change 4257 merged by zuul: chan_sip: Incorrect display option Outbound reg. retry 403 [https://gerrit.asterisk.org/4257|https://gerrit.asterisk.org/4257] By: Friendly Automation (friendly-automation) 2016-11-01 14:28:45.586-0500 Change 4261 merged by zuul: chan_sip: Incorrect display option Outbound reg. retry 403 [https://gerrit.asterisk.org/4261|https://gerrit.asterisk.org/4261] By: Friendly Automation (friendly-automation) 2016-11-02 05:24:28.419-0500 Change 4258 merged by Joshua Colp: chan_sip: Incorrect display option Outbound reg. retry 403 [https://gerrit.asterisk.org/4258|https://gerrit.asterisk.org/4258] | ||